# Knowledge-Mgmt

./: .gitignore  ClaudCode.prompt  README.md  config.example.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompts.example.yaml  pyproject.toml  vercel.json
app/: layout.tsx  page.tsx
app/api/content/: route.ts
app/api/digests/: route.ts
app/api/gmail/: route.ts
app/api/ingest/: route.ts
app/api/jobs/: route.ts
app/api/process/: route.ts
app/api/sources/: route.ts
app/api/stats/: route.ts
app/content/: page.tsx
app/digests/: page.tsx
app/digests/[weekNumber]/: page.tsx
app/jobs/: page.tsx
app/sources/: page.tsx
components/: app-sidebar.tsx
lib/: config.ts
lib/db/: index.ts  schema.ts
lib/services/delivery/: email.ts
lib/services/digest/: generator.ts  index.ts  renderer.ts
lib/services/ingestion/: gmail.ts  index.ts  substack.ts  youtube.ts
lib/services/processing/: clustering.ts  embeddings.ts  extractor.ts  fingerprint.ts  novelty.ts  pipeline.ts
scripts/: 001-create-tables.sql
src/weekly_intel/: __init__.py  __main__.py  cli.py  config.py  scheduler.py
src/weekly_intel/database/: __init__.py  connection.py  migrations.py  models.py
src/weekly_intel/delivery/: __init__.py  email.py
src/weekly_intel/digest/: __init__.py  generator.py  html.py  markdown.py
src/weekly_intel/ingestion/: __init__.py  base.py  gmail.py  substack.py  youtube.py
src/weekly_intel/processing/: __init__.py  extractor.py  (+5 more)
weekly-intel-web/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
(+49 files in other folders)
